<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_stations"
            android:icon="@drawable/ic_assessment_black_24dp"
            android:title="@string/stations" />
    </group>

    <item android:title="@string/others">

        <menu>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_info_black_24dp"

                android:title="@string/about" />
        </menu>
    </item>

</menu>